compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__assignments__keyword_assignment.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
assertion_line: 191
expression: "\npub fn main() {\n  let class = 10\n  let debugger = 50\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let class = 10
  let debugger = 50
}


----- COMPILED JAVASCRIPT
export function main() {
  let class$ = 10;
  let debugger$ = 50;
  return debugger$;
}
