compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__assignments__let_assert_string_prefix.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
assertion_line: 179
expression: "\npub fn main() {\n  let assert \"Game \" ++ id = \"Game 1\"\n}\n"
---
import { makeError } from "../rakun.mjs";

export function main() {
  let $ = "Game 1";
  if (!$.startsWith("Game ")) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "main",
      "Pattern match failed, no pattern matched the value.",
      { value: $ }
    )
  }
  let id = $.slice(5);
  return $;
}
