compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__assignments__nested_binding.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
assertion_line: 26
expression: "\nfn go(x) {\n  let assert #(a, #(b, c, 2) as t, _, 1) = x\n}\n"
---
import { makeError } from "../rakun.mjs";

function go(x) {
  if (x[1][2] !== 2 || x[3] !== 1) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  let a = x[0];
  let t = x[1];
  let b = x[1][0];
  let c = x[1][1];
  return x;
}
